# lett-next

./: .dockerignore  .gitignore  Dockerfile  README.md  build_submission.py  evaluate_thresholds.py  predict.py  predict.sh  prepare.py  pyproject.toml  train.py  validate.py  validate_checkpoint.py
artifacts/: normalization_stats.json  target_audit.json
configs/: lett_next.yaml
configs/pants/: class_map_v1.json
data/prepared/: pants_aux_val_manifest.json
figures/: lett_next_visual_abstract.json
lett_next/: artifacts.py  config.py  evaluation.py  inference.py  losses.py  metrics.py  models.py  pants_aux.py  pipeline.py  prompts.py  recipe.py  submission_cpu.py  submission_validation.py
lett_next/data/: __init__.py
lett_next/data/recist/: __init__.py  case_loader.py  constants.py  crops.py  dataset.py  input_channels.py  io.py  manifest.py  normalization.py  recist_geometry.py  records.py  reports.py  resampling.py  split_cache.py  validation.py
scripts/: precompute_case_caches.py
scripts/visualizations/: create_mednext_architecture_figure.py  create_visual_abstract.py
tests/: test_reproducibility_contract.py
