[project]
name = "lett-next"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nibabel>=5.3.3",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "scipy>=1.17.1",
    "torch>=2.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint.per-file-ignores]
"scripts/precompute_case_caches.py" = ["E402"]
"tests/test_reproducibility_contract.py" = ["E402"]
"train.py" = ["E402"]
